# ClientServer

./: CMakeLists.txt
client/: CMakeLists.txt  client.cpp  client.ini
server/: CMakeLists.txt  server.cpp  server.ini
test/: CMakeLists.txt  serverTest.cpp
